** Fixed z-index issue in site menu

--- a/webapp/src/main/webapp/resources/novus/scss/menu.scss
+++ b/webapp/src/main/webapp/resources/novus/scss/menu.scss
@@ -133,6 +133,7 @@ $search-box-width-focus: 175px;
   width: 300px;
   right: 0px;
   margin-right: -8px;
+  z-index: 9999;
 }
 
 .menu-tools-search-result h4 {
